--- a/css/styles.css
+++ b/css/styles.css
@@ -382,6 +382,7 @@ a {
   display: flex;
   flex-direction: column;
   padding-bottom: 60px;
+  padding-top: 60px;
 }
 .footer {
   background-color: var(--color-black-secondary);
@@ -413,13 +414,15 @@ a {
 .footer-tel:hover {
   color: var(--color-blue);
 }
+.logo-footer-box{
+
+}
 
 .logo-footer {
-  display: inline-block;
+  padding-left: 15px;
   width: 145px;
   height: 31px;
-  margin-left: 15px;
-  margin-top: 60px;
+  
   margin-bottom: 20px;
   font-family: "Raleway", sans-serif;
   font-style: normal;
