--- a/css/styles.css
+++ b/css/styles.css
@@ -1,11 +1,7 @@
 body {
   font-family: "Roboto";
 }
-*,
-*::before,
-*::after {
-  box-sizing: content-box;
-}
+
 
 :root {
   --color-black: #212121;
@@ -24,17 +20,7 @@ ul {
   padding-left: 0px;
   margin: 0px;
 }
-h1 {
-  margin: 0px;
-}
-h2 {
-  margin: 0px;
-}
-h3 {
-  margin: 0px;
-}
-
-p {
+h1,h2,h3,p {
   margin: 0px;
 }
 
@@ -140,8 +126,6 @@ img {
 }
 
 .main-title {
-  display: flex;
-  flex-direction: column;
   margin: 0 auto;
   width: 696px;
 }
@@ -157,6 +141,7 @@ img {
   color: var(--color-white);
 }
 .main-section-button {
+  display: block;
   border: none;
   margin-left: auto;
   margin-right: auto;
@@ -187,16 +172,16 @@ img {
   border-radius: 4px;
 }
 /* main-qualities */
-.container-qualities {
+.section-feature {
   padding-bottom: 94px;
   padding-top: 94px;
 }
-.qualities {
+.feature {
   display: flex;
   justify-content: center;
   gap: 30px;
 }
-.qualities-box {
+.feature-box {
   width: 270px;
 }
 .visually-hidden {
@@ -210,7 +195,7 @@ img {
   clip-path: inset(50%);
   margin: -1px;
 }
-.main-qualities-title {
+.feature-title {
   font-weight: 700;
   font-size: 14px;
   line-height: 1.14;
@@ -219,7 +204,7 @@ img {
   color: var(--color-black);
   margin: 0px;
 }
-.main-qualities-description {
+.feature-description {
   margin-top: 10px;
   font-weight: 400;
   font-size: 14px;
@@ -228,9 +213,11 @@ img {
   color: var(--color-grey);
 }
 /* what-doing */
-.container-what-doing {
+.what-doing{
   padding-bottom: 94px;
+
 }
+
 .what-doing-list {
   display: flex;
   gap: 30px;
@@ -331,10 +318,7 @@ img {
   border-radius: 0px;
 }
 /* footer */
-.container-footer {
-  display: flex;
-  flex-direction: column;
-}
+
 .footer {
   padding-bottom: 60px;
   padding-top: 60px;
@@ -367,6 +351,7 @@ img {
 }
 
 .logo-footer {
+  display: block;
   margin-bottom: 20px;
   font-family: "Raleway", sans-serif;
   font-style: normal;
@@ -399,8 +384,6 @@ img {
   padding-bottom: 94px;
 }
 
-.portfolio-container {
-}
 .filters {
   justify-content: center;
   gap: 8px;
@@ -437,6 +420,7 @@ img {
 }
 
 /* portfolio card */
+
 .portfolio-card {
   gap: 30px;
   display: flex;
