--- a/css/styles.css
+++ b/css/styles.css
@@ -286,7 +286,7 @@ img {
   text-align: center;
 }
 
-.our-time-card1 {
+.our-time-card {
   background-color: var(--color-white);
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -294,31 +294,8 @@ img {
   background: url(4853.jpg);
   border-radius: 0px;
 }
-.our-time-card2 {
-  background-color: var(--color-white);
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
-    0px 2px 1px rgba(0, 0, 0, 0.2);
-  border-radius: 0px 0px 4px 4px;
-  background: url(5844);
-  border-radius: 0px;
-}
-.our-time-card3 {
-  background-color: var(--color-white);
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
-    0px 2px 1px rgba(0, 0, 0, 0.2);
-  border-radius: 0px 0px 4px 4px;
-  background: url(16166.jpg);
-  border-radius: 0px;
-}
-.our-time-card4 {
-  background-color: var(--color-white);
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
-    0px 2px 1px rgba(0, 0, 0, 0.2);
-  border-radius: 0px 0px 4px 4px;
-  background: url(2968);
-  border-radius: 0px;
-}
-/* footer */
+
+/*footer*/
 
 .footer {
   padding-bottom: 60px;
